Add unsloth_zoo dependency to Dockerfiles
Install unsloth_zoo before installing unsloth to resolve import error.
This is required as per pyproject.toml dependencies.

--- a/Dockerfile.fp8
+++ b/Dockerfile.fp8
@@ -55,6 +55,9 @@ RUN pip install --no-cache-dir \
     sentencepiece \
     protobuf
 
+# Install unsloth_zoo (required by unsloth)
+RUN pip install --no-cache-dir unsloth_zoo>=2025.11.4
+
 # Copy Unsloth source code
 WORKDIR /workspace
 COPY . /workspace/unsloth/
