--- a/Dockerfile.fp8
+++ b/Dockerfile.fp8
@@ -72,19 +72,24 @@ RUN mkdir -p /workspace/outputs
 # Set working directory to examples
 WORKDIR /workspace/unsloth/examples
 
-# Verify installation
+# Verify installation (skip unsloth import as it requires GPU at import time)
 RUN python -c "import torch; print(f'PyTorch: {torch.__version__}')" && \
     python -c "import transformer_engine; print(f'Transformer Engine: {transformer_engine.__version__}')" && \
     python -c "import accelerate; print(f'Accelerate: {accelerate.__version__}')" && \
-    python -c "from unsloth import FastLanguageModel; print('Unsloth: OK')" && \
-    python -c "from unsloth import check_fp8_training_support; print(f'FP8 Support: {check_fp8_training_support()}')"
+    python -c "import sys; sys.path.insert(0, '/workspace/unsloth'); print('Unsloth installed - will verify with GPU at runtime')"
 
-# Print GPU info on container start
+# Print GPU info and verify unsloth on container start
 RUN echo '#!/bin/bash\n\
 echo "=========================================="\n\
 echo "Unsloth FP8 Training Container"\n\
 echo "=========================================="\n\
 nvidia-smi --query-gpu=gpu_name,compute_cap,driver_version,memory.total --format=csv,noheader\n\
+echo "=========================================="\n\
+echo "Verifying Unsloth installation..."\n\
+cd /workspace/unsloth\n\
+python -c "from unsloth import FastLanguageModel; print('\''Unsloth: OK'\'')" || echo "Warning: Unsloth verification failed"\n\
+python -c "from unsloth import check_fp8_training_support; print(f'\''FP8 Support: {check_fp8_training_support()}'\'')'" || echo "Warning: FP8 check failed"\n\
+cd /workspace/unsloth/examples\n\
 echo "=========================================="\n\
 echo "Available Examples:"\n\
 echo "  - python test_fp8_quick.py"\n\
