--- a/Dockerfile.fp8
+++ b/Dockerfile.fp8
@@ -19,6 +19,7 @@ FROM nvcr.io/nvidia/pytorch:25.10-py3
 ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHONUNBUFFERED=1
 ENV CUDA_HOME=/usr/local/cuda
+ENV PYTHONPATH=/workspace/unsloth:${PYTHONPATH}
 
 LABEL maintainer="Unsloth AI"
 LABEL description="Unsloth with FP8 mixed precision training support (Transformer Engine)"
